crates/test-ui/ui/invalid_ns_string_input.stderr
error[E0308]: mismatched types
 --> ui/invalid_ns_string_input.rs
  |
  |     let _ = ns_string!(1u8);
  |                        ^^^ expected `&str`, found `u8`
